[package]
name = "ssh-multi"
version = "0.1.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
rayon = "1.11.0"
tokio = { version = "1.47.1", features = ["io-std", "io-util", "macros", "net", "rt", "rt-multi-thread"] }

[profile.release]
lto = true
opt-level = 2
